// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain a proper content 1`] = `
<cert-card__field-val
  data="foo"
  type="text"
>
  <span
    className="cert-card__field-val cert-card__field-val_type_text"
    data-lego="react"
    style={Object {}}
  >
    foo
  </span>
</cert-card__field-val>
`;

exports[`should print a hyphen in case of empty text 1`] = `
<cert-card__field-val
  data=""
  type="text"
>
  <span
    className="cert-card__field-val cert-card__field-val_type_text"
    data-lego="react"
    style={Object {}}
  >
    —
  </span>
</cert-card__field-val>
`;
